--- a/operations/experimental/enable-backup-restore.yml
+++ b/operations/experimental/enable-backup-restore.yml
@@ -35,6 +35,7 @@
           consul_server: nil
           consul_client: {from: consul_client_link}
 
+  #CAPI properties
   - type: replace
     path: /instance_groups/name=api/jobs/name=cloud_controller_ng/properties?/cloud_controller/release_level_backup?
     value: true
@@ -54,6 +55,12 @@
     path: /instance_groups/name=backup-restore/jobs/name=bbr-cloudcontrollerdb/properties?/cloud_controller/release_level_backup?
     value: true
 
+  #cf-networking properties
   - type: replace
     path: /instance_groups/name=backup-restore/jobs/name=bbr-cfnetworkingdb/properties?/release_level_backup?
+    value: true
+
+  #uaa properties
+  - type: replace
+    path: /instance_groups/name=uaa/jobs/name=uaa/properties?/release_level_backup?
     value: true
